[gd_scene load_steps=23 format=3 uid="uid://b22s74ndihcp7"]

[ext_resource type="Texture2D" uid="uid://inc5kqq4phhj" path="res://red level/red block.png" id="1_3pekb"]
[ext_resource type="Script" uid="uid://c42q2fahfoc1y" path="res://chapter3/ch_3_lvl_2.gd" id="1_hwq3r"]
[ext_resource type="Texture2D" uid="uid://cujsfm13ulrsj" path="res://Background/Gray.png" id="1_ybcax"]
[ext_resource type="PackedScene" uid="uid://dgo2istfpbd03" path="res://camera/camera_2d.tscn" id="3_ve6tw"]
[ext_resource type="Texture2D" uid="uid://d171ww2eu3fsr" path="res://red level/red opening door.png" id="4_q7632"]
[ext_resource type="PackedScene" uid="uid://c6tnrclb70hyi" path="res://Character/player.tscn" id="5_hwq3r"]
[ext_resource type="PackedScene" uid="uid://1d5y5pivsepk" path="res://levels/cookies.tscn" id="6_o1y2g"]
[ext_resource type="AudioStream" uid="uid://lsbjwctespjp" path="res://Sounds/sound4.mp3" id="8_o1y2g"]
[ext_resource type="AudioStream" uid="uid://cfrkdcxbbcs84" path="res://Sounds/Minimalist4.mp3" id="9_rc1eb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tey2a"]
texture = ExtResource("1_3pekb")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_4byk8"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_tey2a")

[sub_resource type="Animation" id="Animation_at1ld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_dfjjl"]
resource_name = "death-text"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sd18g"]
_data = {
&"RESET": SubResource("Animation_at1ld"),
&"death-text": SubResource("Animation_dfjjl")
}

[sub_resource type="SegmentShape2D" id="SegmentShape2D_5k3bi"]
a = Vector2(1058, 616)
b = Vector2(9, 618)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hwq3r"]
size = Vector2(29, 354)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o1y2g"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rc1eb"]
size = Vector2(64, 63)

[sub_resource type="Animation" id="Animation_5k3bi"]
resource_name = "FallingBlockAnim"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667, 1.14313),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(416, 34), Vector2(416, 358), Vector2(416, 30)]
}

[sub_resource type="Animation" id="Animation_gss4x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(416, 34)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t3ftq"]
_data = {
&"FallingBlockAnim": SubResource("Animation_5k3bi"),
&"RESET": SubResource("Animation_gss4x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oqhvd"]
size = Vector2(10, 257)

[node name="ch_3_lvl2" type="Node2D"]
script = ExtResource("1_hwq3r")

[node name="Gray" type="Sprite2D" parent="."]
position = Vector2(585.5, 425.5)
scale = Vector2(17.5781, 11.5781)
texture = ExtResource("1_ybcax")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_4byk8")
format = 2
layer_0/tile_data = PackedInt32Array(393216, 0, 0, 393218, 0, 0, 393220, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, 589840, 0, 0, 655376, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 0, 655377, 0, 0, 393224, 0, 0, 393226, 0, 0, 393222, 0, 0, 393228, 0, 0, 393230, 0, 0)

[node name="Camera2D" parent="." instance=ExtResource("3_ve6tw")]
position = Vector2(579, 321)

[node name="RedOpeningDoor" type="Sprite2D" parent="."]
position = Vector2(161, 354)
texture = ExtResource("4_q7632")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="DOORS" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("5_hwq3r")]
position = Vector2(163, 347)

[node name="Cookies" parent="." instance=ExtResource("6_o1y2g")]
position = Vector2(938, 356)

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_o1y2g")
volume_db = 2.0

[node name="replay sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_rc1eb")
volume_db = 12.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.321181
anchor_top = 0.5
anchor_right = 0.321181
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 25.0
offset_right = 271.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
bbcode_enabled = true
text = "[shake]Press [rainbow]R[/rainbow] to Replay[/shake]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sd18g")
}

[node name="FalldeathArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FalldeathArea"]
position = Vector2(47, 23)
shape = SubResource("SegmentShape2D_5k3bi")

[node name="SwitchPlaces" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwitchPlaces"]
position = Vector2(861.5, 267)
shape = SubResource("RectangleShape2D_hwq3r")

[node name="Falling_block" type="StaticBody2D" parent="."]
position = Vector2(416, 34)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Falling_block"]
texture = ExtResource("1_3pekb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Falling_block"]
shape = SubResource("RectangleShape2D_o1y2g")

[node name="Area2D_killer_wall" type="Area2D" parent="Falling_block"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Falling_block/Area2D_killer_wall"]
self_modulate = Color(0.168627, 0.192157, 0.768627, 1)
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_rc1eb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Falling_block"]
libraries = {
&"": SubResource("AnimationLibrary_t3ftq")
}

[node name="FallingwallDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallingwallDetectionArea"]
position = Vector2(481, 275)
shape = SubResource("RectangleShape2D_oqhvd")

[connection signal="body_entered" from="FalldeathArea" to="." method="_on_falldeath_area_body_entered"]
[connection signal="body_entered" from="SwitchPlaces" to="." method="_on_switch_places_body_entered"]
[connection signal="body_entered" from="Falling_block/Area2D_killer_wall" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="FallingwallDetectionArea" to="." method="_on_fallingwall_detection_area_body_entered"]
